# criticality

./: .Rbuildignore  DESCRIPTION  LICENSE  NAMESPACE  R-CMD-check.yaml  README.md  fit.R  notebook.Rmd  risk.R  split.R  test.R
.github/workflows/: R-CMD-check.yaml  coveralls.yml  test-coverage.yml
R/: bn.R  fit.R  model.R  nn.R  notebook.Rmd  plot.R  risk.R  sample.R  scale.R  search.Rmd  split.R  tabulate.R  test.R
criticality/: .Rbuildignore
criticality-torch/: .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  setup.py
criticality-torch/criticality_torch/: __init__.py
criticality-torch/criticality_torch/data/: __init__.py  bayesian_network.py  dataset.py  preprocessing.py
criticality-torch/criticality_torch/evaluation/: __init__.py  metrics.py  predict.py  risk.py
criticality-torch/criticality_torch/models/: __init__.py  base.py  ensemble.py  losses.py
criticality-torch/criticality_torch/utils/: __init__.py  config.py  logging.py  visualization.py
criticality-torch/docs/: ARCHITECTURE.md
criticality-torch/examples/: README.md  build_bayesian_network.py  estimate_risk.py  train_ensemble.py
criticality-torch/tests/: __init__.py  conftest.py  test_model.py  test_preprocessing.py
criticality/R/: bn.R  model.R  nn.R  risk.R  scale.R  tabulate.R  test.R
data/: b332.csv  bn.RData  facility.csv  mcnp-dataset.RData  mcnp-output.csv  test-data.csv  test-mae.csv  test.RData  training-data.csv
data/model/: 1.csv
data/remodel/: 1.csv
example/: test-mae.csv  training-data.csv
example/data/: .Rhistory  facility.csv  mcnp-dataset.RData
man/: BN.Rd  Fit.Rd  Model.Rd  NAMESPACE  NN.Rd  Plot.Rd  Risk.Rd  Sample.Rd  Scale.Rd  Split.Rd  Tabulate.Rd  Test.Rd
man/R/: fit.R  plot.R  sample.R  split.R
notebooks/: .Rhistory  bn.RData  ettin.Rmd  ettin.nb.html
pkg/: .Rhistory
(+31 files in other folders)
